# moltendb-benchmark-app

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-release.yml  bump-version.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html
