[workspace]

[package]
name = "moltendb-benchmark-app"
version = "0.2.0"
edition = "2024"

[package.metadata.winres]
icon = "icons/icon.ico"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
moltendb-core = "=1.0.0-rc5"
tempfile = "3"
sysinfo = "0.33"

[profile.release]
opt-level = 3        # Optimize for maximum runtime performance (speed over size)
lto = "fat"          # Equivalent to `true`, enables aggressive cross-crate optimization
codegen-units = 1    # Maximum optimization at the cost of compile time
strip = true         # Removes symbols (keeps binary small without hurting speed)
panic = "abort"      # Removes unwinding code, slightly improving performance
